--- a/app/views/lists.html
+++ b/app/views/lists.html
@@ -1,7 +1,7 @@
 
 
             <!-- FEATURED INFORMATION -->
-<div class="featured">
+<div class="featured w3-animate-bottom" id="featured-div">
     <div id="featured-header">
         <h1>FEATURED</h1>
         <ul class="featured-header-icons">
