--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,12 +1,13 @@
 <!--    HOME SCREEN AND IMAGE SLIDER    -->
+<div id="main-div">
 <main>
 <div class="slideshow-container">
 
 <div id="header">
     <ul>
-        <li><a href="#0" class="popup-description-trigger"><img border="0" alt="Information icon" src="img/icon_info.png" width="100%" height="100%" align="middle">INFORMATION</a></li>
+        <li><a href="#0" class="popup-description-trigger"><img border="0" alt="Information icon" src="img/icon_info.png" width="100%" height="100%" align="middle" style="z-index:100 !important;">INFORMATION</a></li>
 
-        <li><a href="#0" class="popup-highlights-trigger">EXHIBITION HIGHLIGHTS<img border="0" alt="Exhibtiion Highlights icon" src="img/icon_museum.png" width="100%" height="100%" align="middle"></a></li>
+        <li><a href="#0" class="popup-highlights-trigger">EXHIBITION HIGHLIGHTS<img border="0" alt="Exhibtiion Highlights icon" src="img/icon_museum.png" width="100%" height="100%" align="middle" style="z-index:100 !important;"></a></li>
     </ul>
 </div>
 
@@ -76,13 +77,14 @@
 
   </div>
 
-  <a class="prev" onclick="plusSlides(-1)"><img src="img/icon_previous.png" /> previous</a>
-  <a class="next" onclick="plusSlides(1)">next <img src="img/icon_next.png"/></a>
+  <a class="prev" onclick="plusSlides(-1)"><img src="img/icon_previous.png" /> <span style="vertical-align: top;display: inline-block;line-height: normal;">previous</span></a>
+  <a class="next" onclick="plusSlides(1)"><span style="vertical-align: top;display: inline-block;line-height: normal;">next </span><img src="img/icon_next.png"/></a>
 </div>
 
 <div style="text-align:center">
 <span class="dot" ng-repeat="(id, list) in lists" ng-click="currentSlide($index+1)"></span>
 </div>
     <script src="js/high_slideshow.js"></script>
+</div>
 </div>
 </div>
