--- a/app/views/lists.html
+++ b/app/views/lists.html
@@ -27,10 +27,10 @@
             <a ng-href="#/topics/{{ list.order }}"><div  class="featured-grid-thumbnail" style="background-image: url({{ list.thumbnail }});width: 100%;height: 100%;">  </div>
               <!-- <img  class="featured-grid-thumbnail" ng-if="list.thumbnail" ng-src="{{ list.thumbnail }}" alt="Thumbnail for {{ list.title }}"> -->
             </a>
-            <div class="featured-grid-title">{{ list.title }}</div>
-            <div class="featured-grid-item-numbers"><a ng-href="#/topics/{{ list.order }}">Browse {{ list.numberOfItems}} items</a></div>
+            <a ng-href="#/topics/{{ list.order }}"><div class="featured-grid-title">{{ list.title }}</div></a>
+            <a class="featured-grid-item-numbers" ng-href="#/topics/{{ list.order }}">Browse {{ list.numberOfItems}} items</a>
             <div class="featured-grid-description">
-                <p>  <div ng-if="list.description" ng-bind-html="list.description | words:config.listSnippet"></div> </p>
+                <p><div ng-if="list.description" ng-bind-html="list.description | words:config.listSnippet"></div> </p>
             </div>
         </li>
 
