--- a/app/views/main.html
+++ b/app/views/main.html
@@ -12,17 +12,17 @@
 </div>
 
 <div class="homeSlides">
-    <img src="img/HS_1.png" height="100%" width="100%"/>
+    <img src="{{backgroundimage1}}" height="100%" width="100%"/>
     <div class="slide-caption"></div>
 </div>
 
 <div class="homeSlides">
-    <img src="img/HS_2.png" height="100%" width="100%"/>
+    <img src="{{backgroundimage2}}" height="100%" width="100%"/>
     <div class="slide-caption"></div>
 </div>
 
 <div class="homeSlides">
-    <img src="img/HS_3.png" height="100%" width="100%"/>
+    <img src="{{backgroundimage3}}" height="100%" width="100%"/>
     <div class="slide-caption"></div>
 </div>
 
