--- a/app/views/items.html
+++ b/app/views/items.html
@@ -94,11 +94,23 @@
 </div>
     <script src="js/high_slideshow.js"></script>
     <div id="list-item-links">
-      <h1><a href="#">View digitised item at Trove <img src="img/icon-extLinks.png"></a></h1>
+      <h1><a id="viewitemurl" href="#">View digitised item at Trove <img src="img/icon-extLinks.png"></a></h1>
       <h2>Part of <a href="#">TOPIC</a></h2>
     </div>
     <img src="img/icon_close.png" height="100%" width="100%" class="tertiary-close"/>
 </div>
+<div id="resources-footer" style="margin-top:0px !important;">
+    <div id="resources-footer-main">
+        <h1>Visit the Exhibition</h1>
+        <h2><a href="https://www.nla.gov.au/exhibitions/the-sell">The Sell: Australian Advertising 1790s to 1990s</a></h2>
+        <p>National Library Australia, Canberra</p>
+        <p>23rd November 2016 to 25th April 2017s</p>
+    </div>
+        <div id="featured-footer-secondary">
+            <a href="http://trove.nla.gov.au/"><img src="img/icon_logo.png"/></a>
+            <h3>Powered by <a href="http://trove.nla.gov.au/">Trove</a></h3>
+        </div>
+    </div>
 </div>
 <script src="js/grid-list-view.js"></script>
 
