--- a/app/views/list.html
+++ b/app/views/list.html
@@ -31,11 +31,11 @@
     <div id="resources-list-container" ng-show="items">
 
       <ul class="resources-list">
-        <li ng-repeat="item in items | itemsInList:list.order| filter:query | orderBy:sort ">
-          <div ng-click="displayTertiary(item)" class="resource-grid-thumbnail resource-grid-thumbnail-div" style="background-image: url({{ item.thumbnail }});width: 100%;height: 100%;"></div>
-          <a ng-click="displayTertiary(item)" class="resources-grid-title">{{ item.title }}</a>
-          <a ng-click="displayTertiary(item)" class="resources-grid-type">{{ item.type}}</a>
-          <a ng-click="displayTertiary(item)" class="resources-grid-year">{{ item.date}}</a>
+        <li ng-repeat="item in listitems | itemsInList:list.order| filter:query | orderBy:sort ">
+          <div ng-click="displayTertiary($index)" class="resource-grid-thumbnail resource-grid-thumbnail-div" style="background-image: url({{ item.thumbnail }});width: 100%;height: 100%;"></div>
+          <a ng-click="displayTertiary($index)" class="resources-grid-title">{{ item.title }}</a>
+          <a ng-click="displayTertiary($index)" class="resources-grid-type">{{ item.type}}</a>
+          <a ng-click="displayTertiary($index)" class="resources-grid-year">{{ item.date}}</a>
         </li>
 
 
@@ -54,37 +54,28 @@
   <!-- ADD THE YOUR HIGHLIGHT IMAGES AND DESCRIPTIONS HERE -->
   <div class="item-slider-container">
     <div id="highlights-slider" >
-      <div class="highSlides" id="firstitemslide">
-        <div id="item-header">
 
-          <h1 class="itemtitle"></h1>
-          <h2 class="itemdate"></h2>
-          <h3 class="itemtype"></h3>
-
-        </div>
-
-        <img  id="itemimagesrc" height="100%" width="100%">
-
-      </div>
       <div class="highSlides">
-        <div id="item-header">
+        <div class="loading text-muted" ng-show="isloading"><fa name="spinner" size="5" spin></fa><br>Loading resources&hellip;</div>
+        <div id="item-header" ng-hide="isloading">
 
             <h1 class="itemtitle"></h1>
             <h2 class="itemdate"></h2>
             <h3 class="itemtype"></h3>
         </div>
-
+        <div id="item-details" ng-hide="isloading">
+        <img  id="itemimagesrc" height="100%" width="100%">
         <div class="list-item itemdisplaytext" >
 
         </div>
 
         <div class="list-item-caption itemcaption"></div>
-
+      </div>
       </div>
     </div>
 
-    <a class="prev" onclick="plusSlides(-1)"><img src="img/icon_previous.png" /> previous</a>
-    <a class="next" onclick="plusSlides(1)">next <img src="img/icon_next.png"/></a>
+    <a id="itemprev" class="prev" ng-click="displayPrevTertiary()"><img src="img/icon_previous.png" /> previous</a>
+    <a id="itemnext" class="next" ng-click="displayNextTertiary()">next <img src="img/icon_next.png"/></a>
 
   </div>
 
@@ -94,11 +85,23 @@
   </div>
       <script src="js/high_slideshow.js"></script>
       <div id="list-item-links">
-        <h1><a href="#">View digitised item at Trove <img src="img/icon-extLinks.png"></a></h1>
+        <h1><a id="viewitemurl" href="#">View digitised item at Trove <img src="img/icon-extLinks.png"></a></h1>
         <h2>Part of <a href="#">TOPIC</a></h2>
       </div>
       <img src="img/icon_close.png" height="100%" width="100%" class="tertiary-close"/>
   </div>
+  <div id="resources-footer" style="margin-top:0px !important;">
+      <div id="resources-footer-main">
+          <h1>Visit the Exhibition</h1>
+          <h2><a href="https://www.nla.gov.au/exhibitions/the-sell">The Sell: Australian Advertising 1790s to 1990s</a></h2>
+          <p>National Library Australia, Canberra</p>
+          <p>23rd November 2016 to 25th April 2017s</p>
+      </div>
+          <div id="featured-footer-secondary">
+              <a href="http://trove.nla.gov.au/"><img src="img/icon_logo.png"/></a>
+              <h3>Powered by <a href="http://trove.nla.gov.au/">Trove</a></h3>
+          </div>
+      </div>
   </div>
 
 
