--- a/app/views/items.html
+++ b/app/views/items.html
@@ -1,6 +1,6 @@
 <!-- RESOURCES INFORMATION -->
 
-<div class="resources" >
+<div class="resources w3-animate-bottom" >
     <div id="resources-header">
         <h1>RESOURCES</h1>
         <ul class="resources-header-icons">
