--- a/app/views/items.html
+++ b/app/views/items.html
@@ -43,7 +43,7 @@
 
     <ul class="resources-grid">
         <li ng-repeat="item in items | filter:query | orderBy:sort ">
-            <div ng-click="displayTertiary(item.order)" class="resource-grid-thumbnail resource-grid-thumbnail-div" style="background-image: url({{ item.thumbnail }});width: 100%;height: 100%;"></div>
+            <div ng-click="displayTertiary(item.order)" class="resource-grid-thumbnail resource-grid-thumbnail-div" style="background-image: url({{ item.thumbnail }});background-size:cover;"></div>
             <a ng-click="displayTertiary(item.order)" class="resources-grid-title">{{ item.title }}</a>
             <a ng-click="displayTertiary(item.order)" class="resources-grid-type">{{ item.type}}</a>
             <a ng-click="displayTertiary(item.order)" class="resources-grid-year">{{ item.date}}</a>
