--- a/app/views/lists.html
+++ b/app/views/lists.html
@@ -24,8 +24,9 @@
 <div id="featured-list-container" ng-show="lists">
     <ul class="featured-grid">
         <li ng-repeat="(id, list) in lists">
-            <a ng-href="#/topics/{{ list.order }}"><div  class="featured-grid-thumbnail" style="background-image: url({{ list.thumbnail }});width: 100%;height: 100%;">  </div>
-              <!-- <img  class="featured-grid-thumbnail" ng-if="list.thumbnail" ng-src="{{ list.thumbnail }}" alt="Thumbnail for {{ list.title }}"> -->
+            <a ng-href="#/topics/{{ list.order }}">
+              <!-- <div  class="featured-grid-thumbnail" style="background-image: url({{ list.thumbnail }});background-size:cover;">  </div> -->
+              <img  class="featured-grid-thumbnail" ng-if="list.thumbnail" ng-src="{{ list.thumbnail }}" alt="Thumbnail for {{ list.title }}" style="width:100%;height:100%;">
             </a>
             <a ng-href="#/topics/{{ list.order }}"><div class="featured-grid-title">{{ list.title }}</div></a>
             <a class="featured-grid-item-numbers" ng-href="#/topics/{{ list.order }}">Browse {{ list.numberOfItems}} items</a>
