--- a/app/css/index.css
+++ b/app/css/index.css
@@ -153,9 +153,9 @@ main {
 .popup-description-container {
     z-index: 20;
     position: fixed;
-    height: 400px;
+    height: 480px;
     width: 80%;
-    margin:15% 0 0 10%;
+    margin:10% 0 0 10%;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     background-color: #FFFFFF;
 
@@ -178,7 +178,7 @@ main {
     float: left;
     width: 700px;
     margin:15px 0 0 15px;
-    font-size: 40pt;
+    font-size: 30pt;
     font-family: Gilroy !important;
     font-weight: 800;
     text-transform: uppercase;
@@ -189,13 +189,14 @@ main {
     float: left;
     width: 70%;
     margin:0px 0 0 20px;
-    font-size: 16pt;
+    font-size: 13.5pt !important;
     font-family: Gilroy !important;
     font-weight: 300;
-    line-height: 28px;
+    line-height: 25px;
     -webkit-column-count: 2; /* Chrome, Safari, Opera */
     -moz-column-count: 2; /* Firefox */
     column-count: 2;
+
 }
 
 .popup-description-container #ex_high {
@@ -246,13 +247,13 @@ main {
 
 @media screen and (min-width: 1025px) {
     .popup-description-container {
-        height: 480px;
+        height: 440px;
         width: 70%;
         margin:8% 0 0 15%;
     }
     .popup-description-container p {
-        font-size: 17pt;
-        line-height: 30px;
+        font-size: 12pt;
+        line-height: 25px;
         }
 
     .popup-description-container #ex_high {
@@ -277,6 +278,7 @@ main {
     opacity: 0;
     visibility: hidden;
     z-index: 10;
+    background-color: #ffffff;
 }
 
 .popup-highlights.is-visible {
@@ -650,7 +652,7 @@ button {
 
 #featured-header li, #resources-header li {
     display: inline-block;
-    margin: 0 0px 0 25px;
+    margin: 0 0px 0 50px;
     height: 50px;
     width: 50px;
 }
@@ -754,7 +756,7 @@ button {
 #featured-list-container .featured-grid li, #resources-list-container .resources-grid li {
     width: 30%;
     margin: 1.5% 1.5% 1.5% 1.5% ;
-    height: 275px;
+    height: 280px;
     background-color: #dedede;
     display: inline-block;
 }
@@ -767,7 +769,7 @@ button {
 .featured-grid .featured-grid-title {
     position: absolute;
     height: 50px;
-    margin:-100px 0 0 0;
+    margin: -55px 0 0 0 !important;
     background-color: rgba(0,0,0,0.4);
     width: 30%;
     text-align: center;
@@ -802,34 +804,27 @@ button {
         }
 
     .featured-grid .featured-grid-title {
-        margin:-150px 0 0 0 !important;
+        margin:-55px 0 0 0;
         }
 
     .featured-grid .featured-grid-number {
-        margin:-50px 0 0 25% !important;
+        margin:-50px 0 0 25%;
         }
 
     #featured-list-container .featured-list li, #resources-list-container .resources-list li {
-        height: 375px !important;
+        height: 450px;
     }
 
+    .featured-list .featured-grid-title, .resources-list .resources-grid-title{
+          margin: -275px 0px 20px 32%;
+    }
+    .resources-list .resources-grid-type{
+        margin:-230px 0px 20px 32% !important;
+    }
+    .resources-list .resources-grid-year{
+        margin:-200px 0px 20px 32% !important;
+    }
 
-
-		.featured-list .featured-grid-title, .resources-list .resources-grid-title{
-			  margin: -375px 0px 20px 32% !important;
-		}
-		.resources-list .resources-grid-type{
-			margin:-275px 0px 20px 32% !important;
-		}
-		.resources-list .resources-grid-year{
-			margin:-225px 0px 20px 32% !important;
-		}
-		.featured-list .featured-grid-item-numbers{
-			margin: -275px 0px 20px 32% !important;
-		}
-		.featured-list  .featured-grid-description p {
-			margin: -225px 0px 20px 32% !important;
-		}
 }
 
 #featured-list-container .featured-list li, #resources-list-container .resources-list li {
@@ -842,12 +837,12 @@ button {
 
 .featured-list .featured-grid-title, .resources-list .resources-grid-title {
     position: absolute;
-    height: 50px;
-    margin: -275px 0px 20px 32%;
+    height: 40px;
+    margin: -285px 0px 20px 32%;
     background-color: transparent;
     color: #000000;
     width: 90%;
-    font-size: 40pt;
+    font-size: 30pt;
     font-family: Gilroy;
     font-weight: 800;
     line-height: 50px;
@@ -857,28 +852,27 @@ button {
 }
 .featured-list .featured-grid-item-numbers {
     position: absolute;
-    height: 50px;
-    margin: -175px 0px 20px 32%;
+    height: 40px;
+    margin: -250px 0px 60px 32%;
     background-color: transparent;
     color: #000000;
     /*width: 28.8%;*/
-    font-size: 20pt;
+    font-size: 16pt;
     font-family: Gilroy;
     font-weight: 200;
     line-height: 50px;
 }
 
-.featured-list  .featured-grid-description p {
+.featured-list  .featured-grid-description {
 	position: absolute;
-	height: 50px;
-	margin: -125px 0px 20px 32%;
+	height: 200px;
+	margin: -205px 0px 100px 32%;
 	background-color: transparent;
 	color: #000000;
-	/*width: 28.8%;*/
-	font-size: 10pt;
+	font-size: 12pt;
 	font-family: Gilroy;
 	font-weight: 100;
-	line-height: 50px;
+	line-height: 20px;
 }
 
 .featured-list .featured-grid-number, .resources-list .resources-grid-number {
@@ -903,7 +897,7 @@ button {
 
 .resources-list .resources-grid-type {
     position: absolute;
-    margin: -175px 0px 20px 32%;
+    margin: -255px 0px 20px 32%;
     background-color: transparent;
     color: #000000;
     font-size: 20pt;
@@ -914,7 +908,7 @@ button {
 }
 .resources-list .resources-grid-year {
     position: absolute;
-    margin: -125px 0px 20px 32%;
+    margin: -225px 0px 20px 32%;
     background-color: transparent;
     color: #000000;
     font-size: 20pt;
@@ -994,7 +988,7 @@ button {
 .secondary-container .secondary-list li {
     width: 30%;
     margin: 1.5% 0 0 0;
-    height: 275px;
+    height: 375px;
     background-color: #dedede;
 }
 
@@ -1035,7 +1029,7 @@ button {
     margin: -240px 0px 20px 32%;
     background-color: transparent;
     color: #000000;
-    font-size: 20pt;
+    font-size: 16pt;
     font-family: Gilroy;
     font-weight: 300;
     line-height: 50px;
@@ -1046,7 +1040,7 @@ button {
     margin: -200px 0px 20px 32%;
     background-color: transparent;
     color: #000000;
-    font-size: 20pt;
+    font-size: 16pt;
     font-family: Gilroy;
     font-weight: 300;
     line-height: 50px;
@@ -1114,8 +1108,8 @@ button {
     font-size: 30pt;
     font-weight: 800;
     line-height: 50px;
-		margin-top: 30px !important;
-		margin-left: 0px !important;
+    margin-top: 30px !important;
+    margin-left: 0px !important;
 }
 
 #item-header h2 {
@@ -1142,8 +1136,6 @@ button {
     margin: 0px 0 0 5% !important;
     position: fixed;
 }
-
-
 
 
 /* Next & previous buttons */
@@ -1184,7 +1176,7 @@ button {
 }
 #item-details{
 	display:table-cell;
-	 align-items: center; /* Vertical center alignment */
+    align-items: center; /* Vertical center alignment */
 	 justify-content: center; /* Horizontal center alignment */
 	 width: 100vw;
 	 height: 100vh;
@@ -1208,7 +1200,7 @@ button {
     padding: 4px;
     position: absolute;
     margin: 10px 0 0 17.5%;
-    width: 65%;
+    width: 75%;
     font-family: Gilroy;
     font-weight: 300;
     font-size: 14pt;
@@ -1292,14 +1284,11 @@ button {
 
     #item-links {
     margin-top: 350px;
+    }
 }
-}
-
-
 /* TERTIARY ITEM LIST POPUPS */
 
 /* FOOTER FOR BOTH FEATURED AND RESOURCES */
-
 #featured-footer, #resources-footer {
     height: 275px;
     width: 100%;
