--- a/app/views/items.html
+++ b/app/views/items.html
@@ -95,7 +95,7 @@
     <script src="js/high_slideshow.js"></script>
     <div id="list-item-links">
       <h1><a id="viewitemurl" href="#">View digitised item at Trove <img src="img/icon-extLinks.png"></a></h1>
-      <h2>Part of <a href="#">TOPIC</a></h2>
+      <h2>Part of <a href="#">{{list.title}}</a></h2>
     </div>
     <img src="img/icon_close.png" height="100%" width="100%" class="tertiary-close"/>
 </div>
