--- a/app/views/list.html
+++ b/app/views/list.html
@@ -90,7 +90,7 @@
       </div>
       <img src="img/icon_close.png" height="100%" width="100%" class="tertiary-close"/>
   </div>
-  <div id="resources-footer" style="margin-top:0px !important;">
+  <div id="resources-footer" >
       <div id="resources-footer-main">
           <h1>Visit the Exhibition</h1>
           <h2><a href="https://www.nla.gov.au/exhibitions/the-sell">The Sell: Australian Advertising 1790s to 1990s</a></h2>
