--- a/app/views/items.html
+++ b/app/views/items.html
@@ -100,11 +100,8 @@
     <img src="img/icon_close.png" height="100%" width="100%" class="tertiary-close"/>
 </div>
 <div id="resources-footer" >
-    <div id="resources-footer-main">
-        <h1>Visit the Exhibition</h1>
-        <h2><a href="https://www.nla.gov.au/exhibitions/the-sell">The Sell: Australian Advertising 1790s to 1990s</a></h2>
-        <p>National Library Australia, Canberra</p>
-        <p>23rd November 2016 to 25th April 2017s</p>
+    <div id="resources-footer-main" ng-bind-html="footer">
+    
     </div>
         <div id="featured-footer-secondary">
             <a href="http://trove.nla.gov.au/"><img src="img/icon_logo.png"/></a>
@@ -115,11 +112,8 @@
 <script src="js/grid-list-view.js"></script>
 
     <div id="resources-footer">
-        <div id="resources-footer-main">
-            <h1>Visit the Exhibition</h1>
-            <h2><a href="https://www.nla.gov.au/exhibitions/the-sell">The Sell: Australian Advertising 1790s to 1990s</a></h2>
-            <p>National Library Australia, Canberra</p>
-            <p>23rd November 2016 to 25th April 2017s</p>
+        <div id="resources-footer-main" ng-bind-html="footer">
+
         </div>
             <div id="featured-footer-secondary">
                 <a href="http://trove.nla.gov.au/"><img src="img/icon_logo.png"/></a>
