--- a/app/views/lists.html
+++ b/app/views/lists.html
@@ -41,11 +41,8 @@
 <script src="js/grid-list-view.js"></script>
 
     <div id="featured-footer">
-        <div id="featured-footer-main">
-            <h1>Visit the Exhibition</h1>
-            <a href="https://www.nla.gov.au/exhibitions/the-sell">The Sell: Australian Advertising 1790s to 1990s</a>
-            <p>National Library Australia, Canberra</p>
-            <p>23rd November 2016 to 25th April 2017</p>
+        <div id="featured-footer-main" ng-bind-html="footer">
+          
         </div>
         <div id="featured-footer-secondary">
             <a href="http://trove.nla.gov.au/"><img src="img/icon_logo.png"/></a>
