--- a/app/views/list.html
+++ b/app/views/list.html
@@ -32,10 +32,10 @@
 
       <ul class="resources-list">
         <li ng-repeat="item in listitems | itemsInList:list.order| filter:query | orderBy:sort ">
-          <div ng-click="displayTertiary($index)" class="resource-grid-thumbnail resource-grid-thumbnail-div" style="background-image: url({{ item.thumbnail }});background-size:cover;"></div>
-          <a ng-click="displayTertiary($index)" class="resources-grid-title">{{ item.title }}</a>
-          <a ng-click="displayTertiary($index)" class="resources-grid-type">{{ item.type}}</a>
-          <a ng-click="displayTertiary($index)" class="resources-grid-year">{{ item.date}}</a>
+          <div ng-click="displayTertiary($index,$event)" class="resource-grid-thumbnail resource-grid-thumbnail-div" style="background-image: url({{ item.thumbnail }});background-size:cover;"></div>
+          <a ng-click="displayTertiary($index,$event)" class="resources-grid-title">{{ item.title }}</a>
+          <a ng-click="displayTertiary($index,$event)" class="resources-grid-type">{{ item.type}}</a>
+          <a ng-click="displayTertiary($index,$event)" class="resources-grid-year">{{ item.date}}</a>
         </li>
 
 
@@ -74,8 +74,8 @@
       </div>
     </div>
 
-    <a id="itemprev" class="prev" ng-click="displayPrevTertiary()"><img src="img/icon_previous.png" /> previous</a>
-    <a id="itemnext" class="next" ng-click="displayNextTertiary()">next <img src="img/icon_next.png"/></a>
+    <a id="itemprev" class="prev" ng-click="displayPrevTertiary($event)"><img src="img/icon_previous.png" /> previous</a>
+    <a id="itemnext" class="next" ng-click="displayNextTertiary($event)">next <img src="img/icon_next.png"/></a>
 
   </div>
 
@@ -92,7 +92,7 @@
   </div>
   <div id="resources-footer" >
       <div id="resources-footer-main" ng-bind-html="footer">
-        
+
       </div>
           <div id="featured-footer-secondary">
               <a href="http://trove.nla.gov.au/"><img src="img/icon_logo.png"/></a>
